# xeus-sas

./: .gitignore  BEFORE_AFTER_COMPARISON.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  FINAL_SUMMARY.md  HTML_DEBUG_REPORT.md  HTML_FIX_STATUS.md  HTML_FIX_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LICENSE  PHASE1_CHECKLIST.md  PHASE1_SUMMARY.md  QUICKSTART.md  README.md  TABULATE_AGENT_BRIEF.md  TABULATE_FIX_COMPLETE.md  VERIFICATION.md  check_html_size.py  manual_test.md  pixi.toml  test_capture_html.sh  test_debug_output.sh  test_debug_session  test_debug_session.cpp  test_debug_session2  test_debug_session2.cpp  test_direct.sas  test_euporie.py  test_euporie.sh  test_html.sas  test_html_capture  test_html_capture.cpp  test_html_file_output.sas  test_html_kernel.py  test_html_output.cpp  test_output_cleaning.py  test_output_direct.cpp  (+4 more)
cmake/: FindSAS.cmake
include/xeus-sas/: completion.hpp  inspection.hpp  sas_parser.hpp  sas_session.hpp  xeus_sas_config.hpp  xinterpreter.hpp
share/jupyter/kernels/xeus-sas/: kernel.json.in
src/: completion.cpp  inspection.cpp  main.cpp  sas_parser.cpp  sas_session.cpp  xinterpreter.cpp
test/: CMakeLists.txt  test_completion.cpp  test_parser.cpp  test_session.cpp
